--- a/static/index.html
+++ b/static/index.html
@@ -38,7 +38,7 @@
         <header style="display:block;position:sticky;top:0;padding-right:39px;padding-top:30px;padding-bottom:30px;padding-left:20px;height:80vh;width:50%;">
             <h1>Ömer Rasim Sak</h1>
             <h2>"Junior" Backend Developer, Infotronic, ...</h2>
-            <h3>Near EDDS, Germany</h3>
+            <h3><span data-bs-toggle="tooltip" data-bss-tooltip="" title="Stuttgart ...">Near EDDS,</span> Germany</h3>
             <p>A student with so many interest.</p>
             <ul class="nav nav-tabs flex-column" id="navs" style="border-style:none;width:inherit;">
                 <li class="nav-item" style="border-style:none;display:flex;width:inherit;"><a class="nav-link active" href="#education" style="border-style:none;">Education</a></li>
@@ -77,14 +77,14 @@
                     <header style="width:33%;min-width:33%;"><span>March - 2024</span></header>
                     <div>
                         <h3>Internship in Advanced Development Electronics <br>(TN-ME)</h3>
-                        <p>It was a very good experience for<br> me. I knew already the basic of Electronic but I learned&nbsp;there&nbsp;detailed PCB design and more ...</p><span class="badge rounded-pill bg-primary" style="margin-right:2px;margin-left:2px;">Mecatronic</span><span class="badge rounded-pill bg-primary" style="margin-right:2px;margin-left:2px;">Electronics</span><span class="badge rounded-pill bg-primary" style="margin-right:2px;margin-left:2px;">Platindesign</span><span class="badge rounded-pill bg-primary" style="margin-right:2px;margin-left:2px;">KiCad</span><span class="badge rounded-pill bg-primary" style="margin-right:2px;margin-left:2px;">Information technology</span><span class="badge rounded-pill bg-primary" style="margin-right:2px;margin-left:2px;">Controller Programming</span>
+                        <p>I knew already the basic of Electronic but I learned&nbsp;there&nbsp;detailed PCB design and more like optimized programming etc.</p><span class="badge rounded-pill bg-primary" style="margin-right:2px;margin-left:2px;">Mecatronic</span><span class="badge rounded-pill bg-primary" style="margin-right:2px;margin-left:2px;">Electronics</span><span class="badge rounded-pill bg-primary" style="margin-right:2px;margin-left:2px;">Platindesign</span><span class="badge rounded-pill bg-primary" style="margin-right:2px;margin-left:2px;"></span><span class="badge rounded-pill bg-primary" style="margin-right:2px;margin-left:2px;">Information technology</span><span class="badge rounded-pill bg-primary" style="margin-right:2px;margin-left:2px;">Controller Programming</span>
                     </div>
                 </li>
                 <li class="list-group-item" style="display:flex;border-style:none;">
                     <header style="width:33%;min-width:33%;"><span>April - 2023</span></header>
                     <div>
                         <h3>Internship in Backend Development</h3>
-                        <p>It was my first step into Backend Developing. I constrained fully of Django and learned a lot of things in this time like fundamentals of ...&nbsp;</p><span class="badge rounded-pill bg-primary" style="margin-left:2px;margin-right:2px;">Backend</span><span class="badge rounded-pill bg-primary" style="margin-left:2px;margin-right:2px;">Python</span><span class="badge rounded-pill bg-primary" style="margin-left:2px;margin-right:2px;">Django</span>
+                        <p>It was my first step into Backend Developing. I constrained fully of Django and learned a lot of things in this time. <br>Now I'm interested in Backend-Developing too.</p><span class="badge rounded-pill bg-primary" style="margin-left:2px;margin-right:2px;">Backend</span><span class="badge rounded-pill bg-primary" style="margin-left:2px;margin-right:2px;">Python</span><span class="badge rounded-pill bg-primary" style="margin-left:2px;margin-right:2px;">Django</span>
                     </div>
                 </li>
                 <li class="list-group-item" style="display:flex;border-style:none;">
@@ -103,7 +103,7 @@
                     <header style="width:33%;min-width:33%;"><span>2023 - Present</span></header>
                     <div>
                         <h3><a href="#" style="text-decoration:none;"><span style="text-decoration:underline;color:#181a18;">THW</span><span data-bs-toggle="tooltip" data-bss-tooltip="" title="Federal Agency for Technical Relief"></span></a>&nbsp;Youth&nbsp;</h3>
-                        <p>THW Youth is the youth organisation at the Technische Hilfswerk. Each local section has its own youth group. In total, across Germany there are more than 16,000 children and youth involved.</p>
+                        <p>THW Youth is the youth organization at the Technische Hilfswerk. Each local section has its own youth group. In total, across Germany there are more than 16,000 children and youth involved and I am one of them.&nbsp;</p>
                     </div>
                 </li>
                 <li class="list-group-item" style="display:flex;border-style:none;">
@@ -117,7 +117,7 @@
                     <header style="width:33%;min-width:33%;"><span>2023- Present&nbsp;</span></header>
                     <div>
                         <h3>Free-time in&nbsp;<span data-bs-toggle="tooltip" data-bss-tooltip="" title="We call it &quot;TeckLab&quot;"><span style="text-decoration:underline;">Technic Workshop</span><br><br></span></h3>
-                        <p>It is a Workshop in&nbsp;<span data-bs-toggle="tooltip" data-bss-tooltip="" title="Same place where I am volunteer. There is so many things to do..."><span style="text-decoration:underline;">Mehrgenerationenhaus</span></span><span style="text-decoration:underline;">.</span><br>There is a lot of kid and adult who interested in different topics and have different <span data-bs-toggle="tooltip" data-bss-tooltip="" title="Plant monitoring system with sensors, ..."><span style="text-decoration:underline;">Projects</span></span>. I'm mostly helping there for Programming and Electronic. We have 3D-Printers, a Laser Cutter and more... </p>
+                        <p>It is a Workshop in&nbsp;<span data-bs-toggle="tooltip" data-bss-tooltip="" title="Same place where I am volunteer. There is so many things to do..."><span style="text-decoration:underline;">Mehrgenerationenhaus</span></span><span style="text-decoration:underline;">.</span><br>There is a lot of kid and adult who interested in different topics and have different <span data-bs-toggle="tooltip" data-bss-tooltip="" style="text-decoration:underline;" title="Plant monitoring system with sensors, ,...">Projects</span>. I'm mostly helping there for Programming and Electronic. We have 3D-Printers, a Laser Cutter and more... </p>
                     </div>
                 </li>
             </ul>
@@ -140,9 +140,9 @@
                 <li class="list-group-item" style="border-style:none;">
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="card-title">Festo Internship Project</h4>
+                            <h4 class="card-title">Weather Station</h4>
                             <h6 class="text-muted card-subtitle mb-2">Arduino, Platindesign</h6>
-                            <p class="card-text">This is my project that I have to finish during my internship week. It is a small weather station with few components. My goal was learn how to design a platin, ...</p><a class="card-link" href="https://github.com/oemeRsak/Festo-Internship-Project" target="_blank">GitHub</a>
+                            <p class="card-text">This is my project that I have to finish during my internship week. It is a small weather station with few components. My goal was learn how to design a platin, ...</p><a class="card-link">Not public yet ;)</a>
                         </div>
                     </div>
                 </li>
@@ -165,7 +165,7 @@
 Roses are Red,
 Violets are Blue
 
-Unexpected '{' on line 32.
+Unexpected Error on line 32.
 -->
 
 </html>
