open to suggestions

--- a/static/index.html
+++ b/static/index.html
@@ -3,8 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <!--I need to say, I am not a Frontend Developer and it is freaking hard to design a website for myself. 
-    If you say it is bad, you are probably right. :D-->
+    <!--
+    I need to say, I am not a Frontend Developer and it is freaking hard to design a website for myself. 
+    If you say it is bad, you are probably right. :)
+    I'm open to suggestions. 
+    -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Ömer R. Sak</title>
