--- a/static/index.html
+++ b/static/index.html
@@ -39,32 +39,32 @@
     <link rel="stylesheet" href="assets/css/css/bootstrap.min.css">
 </head>
 
-<body style="background-color:#fbfaf5;">
-    <div style="display: flex;font-family: 'Roboto Slab', serif;padding-left: 58px;padding-bottom: 66px;padding-right: 58px;padding-top: 66px;">
-        <header style="display:block;position:sticky;top:0;padding-right:39px;padding-top:30px;padding-bottom:30px;padding-left:20px;height:80vh;width:50%;">
+<body>
+    <div class="master">
+        <header class="head">
             <h1>Ömer Rasim Sak</h1>
             <h2><span data-bs-toggle="tooltip" data-bss-tooltip="" data-bs-placement="left" title="for or denoting young or younger people.">"Junior"</span> Backend Developer, <span data-bs-toggle="tooltip" data-bss-tooltip="" title="Combines the fields of information technology and electronics.">Infotronics</span>, ...</h2>
             <h3>Stuttgart, Germany</h3>
             <p>A student with so many interest.</p>
-            <ul class="nav nav-tabs flex-column" id="navs" style="border-style: none;width: inherit;">
-                <li class="nav-item" style="border-style:none;display:flex;width:inherit;"><a class="nav-link" href="#projects" style="border-style: none;">Projects</a></li>
-                <li class="nav-item" style="border-style:none;display:flex;width:inherit;"><a class="nav-link" href="#experience" style="border-style: none;">Experience</a></li>
-                <li class="nav-item" style="border-style:none;display:flex;width:inherit;"><a class="nav-link active" href="#education" style="border-style: none;">Education</a></li>
-                <li class="nav-item" style="border-style:none;display:flex;width:inherit;"><a class="nav-link" href="#volunteer" style="border-style: none;">Volunteer</a></li>
+            <ul class="nav navi nav-tabs flex-column" id="navs">
+                <li class="nav-item"><a class="nav-link active" href="#projects" style="border-style: none;">Projects</a></li>
+                <li class="nav-item"><a class="nav-link" href="#experience" style="border-style: none;">Experience</a></li>
+                <li class="nav-item"><a class="nav-link" href="#education" style="border-style: none;">Education</a></li>
+                <li class="nav-item"><a class="nav-link" href="#volunteer" style="border-style: none;">Volunteer</a></li>
             </ul>
-            <div style="position: absolute;bottom: 0;margin-top: 20px;margin-bottom: 20px;"><a href="https://github.com/oemeRsak" target="_blank" style="padding: 5px;"><i class="fab fa-github" style="font-size: 35px;color: var(--bs-body-color);"></i></a><a href="mailto:orsmes6145@gmail.com" target="_blank" style="padding: 5px;"><i class="fas fa-envelope" style="font-size: 35px;color: var(--bs-body-color);"></i></a><a href="https://oemeRsak.github.io" target="_blank" style="padding: 5px;"><i class="fas fa-globe" style="font-size: 35px;color: var(--bs-body-color);"></i></a></div>
+            <div style="position: absolute;bottom: 0;margin-top: 20px;margin-bottom: 20px;"><a href="https://github.com/oemeRsak" target="_blank" class="icon"><i class="fab fa-github"></i></a><a href="mailto:contact@oemeRsak.me" target="_blank" class="icon"><i class="fas fa-envelope"></i></a><a href="https://oemersak.me/" target="_blank" class="icon"><i class="fas fa-globe"></i></a></div>
         </header>
-        <main style="width:50%;" data-bs-spy="scroll" data-bs-target="#navs" data-bs-smooth-scroll="true">
+        <main data-bs-spy="scroll" data-bs-target="#navs" data-bs-smooth-scroll="true">
             <h1>About Me</h1>
             <p style="padding-bottom:150px;">I was born in&nbsp;<span data-bs-toggle="tooltip" data-bss-tooltip="" title="🇹🇷">Turkey</span>&nbsp;and I live in&nbsp;<span data-bs-toggle="tooltip" data-bss-tooltip="" title="🇩🇪">Germany</span>. Ever since I was young, I've been really interested in computers. I started learning the basics of programming when I was in primary school and began working on Arduino projects when I was in secondary school. Later, I learned Python and have been working to get better at it. Now I have a strong interest in Backend Developing and&nbsp;<span data-bs-toggle="tooltip" data-bss-tooltip="" title="Combines the fields of information technology and electronics.">Infotronics</span>. Currently I'm learning few things like Django and sometimes enjoy designing and printing simple 3D models as a hobby.<br><br>My ultimate goal is to continuously advance my knowledge. There is always something to Learn.</p>
-            <ul class="list-group" id="projects" style="border-style:none;padding-bottom:50px;">
-                <li class="list-group-item" style="border-style:none;">
+            <ul class="list-group" id="projects">
+                <li class="list-group-item">
                     <h1>Projects</h1>
                     <div>
                         <p>I am a kid who can say "I'm programming very often" but I can not always prove it. My projects are mostly only on my computer because they are not real Projects. Some are just for test or learn something new and if it is something that more then just few code files that I upload to GitHub than I don't like to make them Public.&nbsp;<br>But there is some of them that I published and you can take a look.</p>
                     </div>
                 </li>
-                <li class="list-group-item" style="border-style:none;">
+                <li class="list-group-item">
                     <div class="card">
                         <div class="card-body">
                             <h4 class="card-title">StadtBank</h4>
@@ -73,7 +73,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="list-group-item" style="border-style:none;">
+                <li class="list-group-item">
                     <div class="card">
                         <div class="card-body">
                             <h4 class="card-title">Weather Station</h4>
@@ -83,70 +83,70 @@
                     </div>
                 </li>
             </ul>
-            <ul class="list-group" id="experience" style="border-style:none;padding-bottom:50px;">
-                <li class="list-group-item" style="border-style:none;">
+            <ul class="list-group" id="experience">
+                <li class="list-group-item">
                     <h1>Experience</h1>
                 </li>
-                <li class="list-group-item" style="display:flex;border-style:none;">
-                    <header style="width:33%;min-width:33%;"><span>March - 2024</span></header>
+                <li class="list-group-item">
+                    <header class="date"><span>March - 2024</span></header>
                     <div>
                         <h3>Internship in Advanced Development Electronics <br>(TN-ME)</h3>
-                        <p>I knew already the basic of Electronic but I learned&nbsp;there&nbsp;detailed PCB design and more like optimized programming etc.</p><span class="badge rounded-pill bg-primary" style="margin-right:2px;margin-left:2px;">Mecatronic</span><span class="badge rounded-pill bg-primary" style="margin-right:2px;margin-left:2px;">Electronics</span><span class="badge rounded-pill bg-primary" style="margin-right:2px;margin-left:2px;">Platindesign</span><span class="badge rounded-pill bg-primary" style="margin-right:2px;margin-left:2px;"></span><span class="badge rounded-pill bg-primary" style="margin-right:2px;margin-left:2px;">Information technology</span><span class="badge rounded-pill bg-primary" style="margin-right:2px;margin-left:2px;">Controller Programming</span>
+                        <p>I knew already the basic of Electronic but I learned&nbsp;there&nbsp;detailed PCB design and more like optimized programming etc.</p><span class="badge rounded-pill bg-primary"">Mecatronic</span><span class="badge rounded-pill bg-primary"">Electronics</span><span class="badge rounded-pill bg-primary"">Platindesign</span><span class="badge rounded-pill bg-primary""></span><span class="badge rounded-pill bg-primary"">Information technology</span><span class="badge rounded-pill bg-primary"">Controller Programming</span>
                     </div>
                 </li>
-                <li class="list-group-item" style="display:flex;border-style:none;">
-                    <header style="width:33%;min-width:33%;"><span>April - 2023</span></header>
+                <li class="list-group-item">
+                    <header class="date"><span>April - 2023</span></header>
                     <div>
                         <h3>Internship in Backend Development</h3>
-                        <p>It was my first step into Backend Developing. I constrained fully of Django and learned a lot of things in this time. <br>Now I'm interested in Backend-Developing and&nbsp;improving myself.</p><span class="badge rounded-pill bg-primary" style="margin-left:2px;margin-right:2px;">Backend</span><span class="badge rounded-pill bg-primary" style="margin-left:2px;margin-right:2px;">Python</span><span class="badge rounded-pill bg-primary" style="margin-left:2px;margin-right:2px;">Django</span>
+                        <p>It was my first step into Backend Developing. I constrained fully of Django and learned a lot of things in this time. <br>Now I'm interested in Backend-Developing and&nbsp;improving myself.</p><span class="badge rounded-pill bg-primary"">Backend</span><span class="badge rounded-pill bg-primary"">Python</span><span class="badge rounded-pill bg-primary"">Django</span>
                     </div>
                 </li>
-                <li class="list-group-item" style="display:flex;border-style:none;">
-                    <header style="width:33%;min-width:33%;"><span>June - 2021</span></header>
+                <li class="list-group-item">
+                    <header class="date"><span>June - 2021</span></header>
                     <div>
                         <h3><span data-bs-toggle="tooltip" data-bss-tooltip="" title="FLL guides youth throught STEM learning and exploration at an early age."><span style="text-decoration:underline;">First Lego League</span></span>&nbsp;(Turkey) </h3>
                         <p>My Team and me won the 1. Place Robot Design in country.<br>In COVID-19 time it was very funny and we had a lot of time for meet with each other. We was the one of the rare teams who can meet (within health rules).</p><span class="badge rounded-pill bg-primary">Lego Build</span><span class="badge rounded-pill bg-primary">STEM</span>
                     </div>
                 </li>
             </ul>
-            <ul class="list-group" id="education" style="border-style:none;padding-bottom:50px;">
-                <li class="list-group-item" style="border-style:none;">
+            <ul class="list-group" id="education">
+                <li class="list-group-item">
                     <h1>Education</h1>
                 </li>
-                <li class="list-group-item" style="display:flex;border-style:none;">
-                    <header style="width:33%;"><span>2023 - Present</span></header>
+                <li class="list-group-item">
+                    <header class="date"><span>2023 - Present</span></header>
                     <div style="width:auto;">
                         <h3>Community School</h3>
                         <p>Germany</p>
                     </div>
                 </li>
-                <li class="list-group-item" style="border-style:none;display:flex;">
-                    <header style="width:33%;"><span>2015 - 2022</span></header>
+                <li class="list-group-item">
+                    <header class="date"><span>2015 - 2022</span></header>
                     <div style="width:auto;">
                         <h3>Primary and secondary school</h3>
                         <p>Turkey</p>
                     </div>
                 </li>
             </ul>
-            <ul class="list-group" id="volunteer" style="border-style:none;padding-bottom:50px;">
-                <li class="list-group-item" style="border-style:none;">
+            <ul class="list-group" id="volunteer">
+                <li class="list-group-item">
                     <h1>Volunteer</h1>
                 </li>
-                <li class="list-group-item" style="display:flex;border-style:none;">
+                <li class="list-group-item">
                     <header style="width:33%;min-width:33%;"><span>2023 - Present</span></header>
                     <div>
                         <h3><a href="https://www.bmi.bund.de/EN/topics/civil-protection/thw/thw.html" style="text-decoration:none;" target="_blank"><span data-bs-toggle="tooltip" data-bss-tooltip="" style="text-decoration:underline;color:#181a18;" title="Federal Agency for Technical Relief">THW</span></a>&nbsp;Youth&nbsp;</h3>
                         <p>THW Youth is the youth organization at the THW. Each local section has its own youth group. In total, across Germany there are more than 16,000 children and youth involved and I am one of them.&nbsp;</p>
                     </div>
                 </li>
-                <li class="list-group-item" style="display:flex;border-style:none;">
+                <li class="list-group-item">
                     <header style="width:33%;min-width:33%;"><span>2023- Present</span></header>
                     <div>
                         <h3 title="">Volunteering in&nbsp;<a href="https://www.mehrgenerationenhaeuser.de/leichte-sprache/was-ist-ein-mehr-generationen-haus" target="_blank" style="text-decoration:none;"><span style="text-decoration:underline;color:#181a18;">Mehrgenerationenhaus</span></a></h3>
                         <p>A "Mehrgenerationenhaus," or multigenerational house, is a community space in Germany where people of all ages come together. It offers activities, support, and services for children, families, and seniors, promoting interaction, mutual help, and learning across generations. It’s a place where people can socialize, participate in workshops, and find help with everyday challenges.</p>
                     </div>
                 </li>
-                <li class="list-group-item" style="display:flex;border-style:none;">
+                <li class="list-group-item">
                     <header style="width:33%;min-width:33%;"><span>2023- Present&nbsp;</span></header>
                     <div>
                         <h3>Free-time in&nbsp;<span data-bs-toggle="tooltip" data-bss-tooltip="" title="We call it &quot;TeckLab&quot;"><span style="text-decoration:underline;">Technic Workshop</span><br><br></span></h3>
