--- a/static/index.html
+++ b/static/index.html
@@ -52,7 +52,7 @@
                 <li class="nav-item" style="border-style:none;display:flex;width:inherit;"><a class="nav-link active" href="#education" style="border-style: none;">Education</a></li>
                 <li class="nav-item" style="border-style:none;display:flex;width:inherit;"><a class="nav-link" href="#volunteer" style="border-style: none;">Volunteer</a></li>
             </ul>
-            <div style="position: absolute;bottom: 0;margin-top: 20px;margin-bottom: 20px;"><a href="https://github.com/oemeRsak" target="_blank" style="padding: 5px;"><i class="fab fa-github" style="font-size: 35px;color: var(--bs-body-color);"></i></a><a href="mailto:orsmes6145@gmail.com" target="_blank" style="padding: 5px;"><i class="fas fa-envelope" style="font-size: 35px;color: var(--bs-body-color);"></i></a><a href="https://oemeRsak.github.io" target="_blank" style="padding: 5px;"><i class="fas fa-globe" style="font-size: 35px;color: var(--bs-body-color);"></i></a></div>
+            <div style="position: absolute;bottom: 0;margin-top: 20px;margin-bottom: 20px;"><a href="https://github.com/oemeRsak" target="_blank" style="padding: 5px;"><i class="fab fa-github" style="font-size: 35px;color: var(--bs-body-color);"></i></a><a href="mailto:mailto:contact@oemeRsak.me" target="_blank" style="padding: 5px;"><i class="fas fa-envelope" style="font-size: 35px;color: var(--bs-body-color);"></i></a><a href="https://oemeRsak.me" target="_blank" style="padding: 5px;"><i class="fas fa-globe" style="font-size: 35px;color: var(--bs-body-color);"></i></a></div>
         </header>
         <main style="width:50%;" data-bs-spy="scroll" data-bs-target="#navs" data-bs-smooth-scroll="true">
             <h1>About Me</h1>
