will not public
sorry

--- a/static/index.html
+++ b/static/index.html
@@ -78,7 +78,7 @@
                         <div class="card-body">
                             <h4 class="card-title">Weather Station</h4>
                             <h6 class="text-muted card-subtitle mb-2">Arduino, Platindesign</h6>
-                            <p class="card-text">This is my project that I have to finish during my internship week. It is a small weather station with few components. My goal was learn how to design a platin, ...</p><a class="card-link" href="">Not public yet ;)</a>
+                            <p class="card-text">This is my project that I have to finish during my internship week. It is a small weather station with few components. My goal was learn how to design a platin, ...</p>
                         </div>
                     </div>
                 </li>
